--- a/OcrInt.Tests/OcrInt.Tests.csproj
+++ b/OcrInt.Tests/OcrInt.Tests.csproj
@@ -312,6 +312,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
+    <None Include="tags.json" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
