--- a/OcrInt/OcrInt.csproj
+++ b/OcrInt/OcrInt.csproj
@@ -81,10 +81,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Doc.cs" />
     <Compile Include="ImageReader.cs" />
+    <Compile Include="Product.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringExtends.cs" />
+    <Compile Include="Tag.cs" />
     <Compile Include="Word.cs" />
   </ItemGroup>
   <ItemGroup>
